--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -69,7 +69,7 @@
   </div>
 
   {% include 'popup-cart' %}
-
+  {% include 'popup-login' %}
 
   {% comment %}{{ 'cookies.min.js' | asset_url | script_tag }}{% endcomment %}
   {{ 'rivets.min.js' | asset_url | script_tag }}
