--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -8,19 +8,18 @@
       <h1>{{ 'account.login' | t }}</h1>
 
       <p>{{ 'account.no_account' | t }} {{ 'account.create_account' | t | customer_register_link }}</p>
-      <p></p>
 
       {{ form.errors | default_errors }}
 
       <label for="CustomerEmail" class="clearfix">{{ 'form.email' | t }}</label>
-      <input type="email" name="customer[email]" id="CustomerEmail" class="input-full{% if form.errors contains 'email' %} error{% endif %}" placeholder="{{ 'form.email' | t }}" autocorrect="off" autocapitalize="off" autofocus>
+      <input type="email" name="customer[email]" id="CustomerEmail" class="{% if form.errors contains 'email' %} error{% endif %}" placeholder="{{ 'form.email' | t }}" autocorrect="off" autocapitalize="off" autofocus>
 
       {% if form.password_needed %}
         <label for="CustomerPassword" class="clearfix">{{ 'account.password' | t }}</label>
-        <input type="password" value="" name="customer[password]" id="CustomerPassword" class="input-full{% if form.errors contains 'password' %} error{% endif %}" placeholder="{{ 'account.password' | t }}">
+        <input type="password" value="" name="customer[password]" id="CustomerPassword" class="{% if form.errors contains 'password' %} error{% endif %}" placeholder="{{ 'account.password' | t }}">
       {% endif %}
 
-      <input type="submit" class="btn btn--full" value="{{ 'account.sign_in' | t }}">
+      <input type="submit" value="{{ 'account.sign_in' | t }}">
 
       <p>
         <a href="/">{{ 'form.cancel' | t }}</a>
