--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -68,6 +68,8 @@
     {% include 'theme-footer' %}
   </div>
 
+  {% include 'theme-nav-toggled' %}
+
   {% include 'popup-cart' %}
   {% include 'popup-login' %}
 
