--- a/assets/app.scss.liquid
+++ b/assets/app.scss.liquid
@@ -677,7 +677,7 @@ form#create_customer,
   }
 }
 
-form#CartPage {
+form#CartPage, form#contact_form {
   display: block;
   width: 100%;
 }
@@ -698,7 +698,7 @@ form#CartPage {
   }
   .quantity {
     display: inline-block;
-    width: $gutter/1.5;
+    min-width: $gutter/1.5;
     height: $gutter/1.5;
     line-height: $gutter/1.5;
     text-align: center;
@@ -762,6 +762,7 @@ body {
     text-align: center;
     white-space: nowrap;
     @include overlay();
+    @include prefixer(transition-delay, 0.2s, webkit moz spec);
     @include prefixer(transform, translateY(-50px), webkit moz ms spec);
     @include transition();
     -webkit-backface-visibility: hidden;
@@ -832,8 +833,8 @@ body {
   overflow: auto;
   -webkit-overflow-scrolling: touch;
   @include transition-property(); // For legacy support
-  @include prefixer(transition-duration, 0.3s, webkit moz spec);
-  @include prefixer(transition-delay, 0.3s, webkit moz spec);
+  @include prefixer(transition-duration, 0.4s, webkit moz spec);
+  @include prefixer(transition-delay, 0.2s, webkit moz spec);
   &.from-left {
     left: 0;
     @include prefixer(transform, translate3d(-100%, 0, 0), webkit moz ms o spec);
