Notes for js to-do items

--- a/assets/app.js.liquid
+++ b/assets/app.js.liquid
@@ -83,6 +83,7 @@ concrete.cacheSelectors = function () {
     // Cart JS
 
     // TO DO
+    // Move variables from "Variant Switching" function
 
   };
 };
