Everything except the search page ><

--- a/assets/app.scss.liquid
+++ b/assets/app.scss.liquid
@@ -41,7 +41,7 @@ $l: 1150px;
 $xl: 1450px;
 
 // Miscellaneous
-$transition: all .5s ease-out;
+$transition: all .3s ease-out;
 
 /* Reset =====================================================================*/
 
@@ -305,13 +305,17 @@ small {
 }
 
 // Forms
-
+form {
+  max-width: 100%;
+}
 input[type="text"],
 input[type="email"],
 input[type="number"],
 input[type="tel"],
 input[type="password"],
+input[type="search"],
 textarea {
+  max-width: 100%;
   height: $gutter;
   line-height: ($gutter - $borderWeight*2);
   padding: 0 $gutter/2;
@@ -339,6 +343,7 @@ input[type="button"],
 input[type="submit"],
 input[type="reset"],
 select {
+  max-width: 100%;
   height: $gutter;
   line-height: ($gutter - $borderWeight*2);
   padding: 0 $gutter/1.5;
@@ -677,7 +682,7 @@ form#create_customer,
   }
 }
 
-form#CartPage, form#contact_form {
+form#AddToCartForm, form#CartPage, form#contact_form {
   display: block;
   width: 100%;
 }
@@ -763,7 +768,7 @@ body {
     white-space: nowrap;
     @include overlay();
     @include prefixer(transition-delay, 0.2s, webkit moz spec);
-    @include prefixer(transform, translateY(-50px), webkit moz ms spec);
+    @include prefixer(transform, translateY(-$gutter/2), webkit moz ms spec);
     @include transition();
     -webkit-backface-visibility: hidden;
     cursor: pointer;
@@ -856,5 +861,62 @@ body {
     position: absolute;
     top: $gutter/2;
     right: $gutter/2;
+  }
+}
+
+/* Social Sharing ============================================================*/
+
+.social-sharing {
+  margin-bottom: $gutter;
+}
+.button.share {
+  padding: 0 $gutter/4;
+  height: $gutter/1.5;
+  line-height: ($gutter/1.5 - $borderWeight*2);
+  font-size: .85rem;
+  &.facebook {
+    background-color: #3b5998;
+    border-color: #3b5998;
+    color: lighten(#3b5998, 40%);
+    &:hover {
+      background-color: darken(#3b5998, 10%);
+      border-color: darken(#3b5998, 10%)
+    }
+  }
+  &.twitter {
+    background-color: #00aced;
+    border-color: #00aced;
+    color: lighten(#00aced, 40%);
+    &:hover {
+      background-color: darken(#00aced, 10%);
+      border-color: darken(#00aced, 10%);
+    }
+  }
+  &.pinterest {
+    background-color: #cb2027;
+    border-color: #cb2027;
+    color: lighten(#cb2027, 40%);
+    &:hover {
+      background-color: darken(#cb2027, 10%);
+      border-color: darken(#cb2027, 10%);
+    }
+  }
+  &.fancy {
+    background-color: #4999dc;
+    border-color: #4999dc;
+    color: lighten(#4999dc, 40%);
+    &:hover {
+      background-color: darken(#4999dc, 10%);
+      border-color: darken(#4999dc, 10%);
+    }
+  }
+  &.google {
+    background-color: #dd4b39;
+    border-color: #dd4b39;
+    color: lighten(#dd4b39, 40%);
+    &:hover {
+      background-color: darken(#dd4b39, 10%);
+      border-color: darken(#dd4b39, 10%);
+    }
   }
 }
