--- a/snippets/theme-footer.liquid
+++ b/snippets/theme-footer.liquid
@@ -7,12 +7,12 @@
     <div class="row">
       <div class="column l5 m12 s12 l-left middle">
         {% if settings.enable_footer_social %}
-          {% include 'theme-social-links' %}
+          {% include 'social-links' %}
         {% endif %}
       </div>
       <div class="column l7 m12 s12 l-right m-middle">
         {% if settings.enable_footer_social %}
-          {% include 'theme-subscribe-form' %}
+          {% include 'subscribe-form' %}
         {% endif %}
       </div>
     </div>
@@ -22,7 +22,7 @@
     <div class="row">
       <div class="column l7 m12 s12 l-left middle">
         {% if settings.enable_gateway_icons %}
-          {% include 'theme-gateway-icons' %}
+          {% include 'payment-gateways' %}
         {% endif %}
       </div>
       <div class="column l5 m12 s12 l-right m-middle">
