--- a/snippets/theme-nav-main.liquid
+++ b/snippets/theme-nav-main.liquid
@@ -1,6 +1,6 @@
 <!-- /snippets/theme-nav-main.liquid -->
 
-<nav class="theme-nav-main s-hide" role="navigation">
+<nav class="theme-nav-main" role="navigation">
   <ul class="inline">
     {% for link in linklists.main-menu.links %}
       {% assign child_list_handle = link.title | handleize %}
@@ -25,9 +25,6 @@
     {% endfor %}
   </ul>
 </nav>
-
-<a href="/" data-nav="#NavToggled" class="nav-toggled-link l-hide m-hide">{{ 'common.menu' | t }}</a>
-
 
 <script>
   // Nav dropdowns
