--- a/templates/search.liquid
+++ b/templates/search.liquid
@@ -2,15 +2,9 @@
 
 {% comment %}
   To return only products or pages in results:
-    - http://docs.shopify.com/manual/configuration/store-customization/return-only-product-in-storefront-search-results
-    - Or manually add type=product or type=page to the search URL as a parameter
+  - http://docs.shopify.com/manual/configuration/store-customization/return-only-product-in-storefront-search-results
+  - Or manually add type=product or type=page to the search URL as a parameter
 {% endcomment %}
-
-{% comment %}
-  Set grid_results to true and set search results as a grid instead of a list.
-  This works well when your search is only for products.
-{% endcomment %}
-{% assign grid_results = false %}
 
 {% comment %}
   Check to enforce respond.js
@@ -18,12 +12,6 @@
 {% assign respond_js_secret_key = shop.domain | md5 %}
 {% unless search.terms == respond_js_secret_key %}
 
-{% assign product_item = false %}
-
-{% comment %}
-  Avoid accessing search.results before the opening paginate tag.
-  If you do, the pagination of results will be broken.
-{% endcomment %}
 {% paginate search.results by 10 %}
 
 <div class="container">
@@ -43,68 +31,61 @@
     <hr class="hr">
 
     {% for item in search.results %}
-      {% comment %}
-        Check if the product is on sale and set a variable to be used below.
-      {% endcomment %}
-      {% assign on_sale = false %}
-      {% if item.compare_at_price > item.price %}
-        {% assign on_sale = true %}
-      {% endif %}
 
-      {% comment %}
-        Check if the product is sold out and set a variable to be used below.
-      {% endcomment %}
-      {% assign sold_out = true %}
-      {% if item.available %}
-        {% assign sold_out = false %}
-      {% endif %}
+      <div class="row">
 
-      {% if grid_results == false %}
-
-        <!-- START list search results-->
-        <div class="row">
-
-          {% if item.featured_image %}
-            {% comment %}
-              We have a featured_image, so it's likely a product
-            {% endcomment %}
-            {% assign product_item %}
-          {% endif %}
-
-
-          {% assign on_sale = false %}
-          {% if product.compare_at_price > product.price %}
-            {% assign on_sale = true %}
-          {% endif %}
-
-          {% assign sold_out = true %}
-          {% if product.available %}
-            {% assign sold_out = false %}
-          {% endif %}
-
+        {% if item.featured_image %}
+          {% comment %}
+            If it has a featured_image, it is probably a product
+          {% endcomment %}
           <div class="column l2 m3 s4">
-            <a href="{{ product.url | within: collection }}">
-              <img src="{{ product.featured_image.src | img_url: 'medium' }}" alt="{{ product.featured_image.alt | escape }}" class="grid__image">
+            <a href="{{ item.url | within: collection }}" title="{{ item.title | escape }}">
+              <img src="{{ item.featured_image.src | img_url: 'medium' }}" alt="{{ item.featured_image.alt | escape }}" class="grid__image">
             </a>
           </div>
-          <div class="column l10 m9 s8">
-            <p class="h4">{{ product.title }}</p>
+        {% endif %}
+
+        {% if item.image %}
+          {% comment %}
+            If it has an article image, it is probably a blog article
+          {% endcomment %}
+          <div class="column l2 m3 s4">
+            <a href="{{ item.url }}" title="{{ item.title | escape }}">
+              <img src="{{ item.featured_image.src | img_url: 'medium' }}" alt="{{ item.featured_image.alt | escape }}" class="grid__image">
+            </a>
+          </div>
+        {% endif %}
+
+        <div class="column {% if item.featured_image or item.image %}l10 m9 s8{% else %}l12{% endif %}">
+          <h2 class="h3">{{ item.title | link_to: item.url }}</h2>
+
+          {% if item.price %}
+            {% comment %}
+              If it has a fprice, it is definitely a product
+            {% endcomment %}
+            {% assign on_sale = false %}
+            {% if item.compare_at_price > item.price %}
+              {% assign on_sale = true %}
+            {% endif %}
+            {% assign sold_out = true %}
+            {% if item.available %}
+              {% assign sold_out = false %}
+            {% endif %}
             <p>
-              <a href="{{ product.url | within: collection }}">{{ product.title }}</a><br>
               {% if on_sale %}
-                {% if product.price_varies %}
-                  {% assign sale_price = product.price | money %}
+                {% if item.price_varies %}
+                  {% assign sale_price = item.price | money %}
                   {{ 'product.on_sale_from_html' | t: price: sale_price }}
                 {% else %}
                   <strong>{{ 'product.on_sale_html' | t: price: sale_price }}</strong>
-                  {{ product.price | money }}
+                  {{ item.price | money }}
                 {% endif %}
               {% else %}
-                {% if product.price_varies %}
-                  {% assign price = product.price | money %}
+                {% if item.price_varies %}
+                  {% assign price = item.price | money %}
                   {{ 'product.priced_from_html' | t: price: price }}
                 {% else %}
-                  {{ product.price | money }}
+                  {{ item.price | money }}
                 {% endif %}
               {% endif %}
               {% if sold_out %}
@@ -112,119 +93,19 @@
               {% endif %}
               {% if on_sale %}
                 <span class="hidden">{{ 'product.original_price' | t }}</span>
-                <s>{{ product.compare_at_price | money }}</s>
+                <s>{{ item.compare_at_price | money }}</s>
               {% endif %}
             </p>
-            <div class="rte">
-              <p>{{ product.content | strip_html | truncatewords: 30 }}</p>
-            </div>
-          </div>
-        </div>
-
-
-
-
-        <div class="row">
-          {% if item.featured_image %}
-            {% comment %}
-              We have a featured_image, so it's likely a product
-            {% endcomment %}
-            <div class="column l4 m3 s1">
-              <a href="{{ item.url }}" title="{{ item.title | escape }}">
-                {{ item.featured_image.src | img_url: 'medium' | img_tag: item.featured_image.alt }}
-              </a>
-            </div>
           {% endif %}
 
-          {% comment %}
-            If we don't have a featured_image, add a push-- class to keep the alignment the same
-          {% endcomment %}
-          <div class="grid__item two-thirds {% unless item.featured_image %}push--one-third{% endunless %}">
-            <h2 class="h3">{{ item.title | link_to: item.url }}</h2>
-
-            {% if item.price %}
-              <p>
-                {% comment %}
-                  You can show a leading 'from' or 'up to' by checking 'product.price_varies'
-                  if your variants have different prices.
-                {% endcomment %}
-                {% if on_sale %}
-                  {% if item.price_varies %}
-                    {% assign sale_price = item.price | money %}
-                    {{ 'products.product.on_sale_from_html' | t: price: sale_price }}
-                  {% else %}
-                    <strong>{{ 'products.product.on_sale' | t }}</strong>
-                    <span itemprop="price">{{ item.price | money }}</span>
-                  {% endif %}
-                {% else %}
-                  {% if item.price_varies %}
-                    {% assign price = item.price | money %}
-                    <span itemprop="price">{{ 'products.general.from_text_html' | t: price: price }}</span>
-                  {% else %}
-                    <span itemprop="price">{{ item.price | money }}</span>
-                  {% endif %}
-                {% endif %}
-                {% if sold_out %}
-                  <br><strong>{{ 'products.product.sold_out' | t }}</strong>
-                {% endif %}
-                {% if on_sale %}
-                  <br><span class="visually-hidden">{{ 'products.general.sale_price' | t }}</span><s>{{ item.compare_at_price | money }}</s>
-                {% endif %}
-              </p>
-            {% endif %}
-
-            {% comment %}
-              Get a brief excerpt of raw text from the page/product
-            {% endcomment %}
+          <div class="rte">
             <p>{{ item.content | strip_html | truncatewords: 50 }}</p>
           </div>
+
         </div>
-        {% unless forloop.last %}<hr>{% endunless %}
-        <!-- END list search results-->
+      </div>
 
-      {% else %}
-
-        <!-- begin grid search results-->
-        <div class="grid__item search-result large--one-third medium--one-third">
-          {% if item.featured_image %}
-            <a href="{{ item.url | within: collection }}" title="{{ item.title | escape }}">
-              {{ item.featured_image.src | img_url: 'medium' | img_tag: item.featured_image.alt }}
-            </a>
-          {% endif %}
-
-          <h5>{{ item.title | link_to: item.url }}</h5>
-
-          {% if item.price %}
-            <p>
-              {% if on_sale %}
-                {% if item.price_varies %}
-                  {% assign sale_price = item.price | money %}
-                  {{ 'products.product.on_sale_from_html' | t: price: sale_price }}
-                {% else %}
-                  <strong>{{ 'products.product.on_sale' | t }}</strong>
-                  <span itemprop="price">{{ item.price | money }}</span>
-                {% endif %}
-              {% else %}
-                {% if item.price_varies %}
-                  {% assign price = item.price | money %}
-                  <span itemprop="price">{{ 'products.general.from_text_html' | t: price: price }}</span>
-                {% else %}
-                  <span itemprop="price">{{ item.price | money }}</span>
-                {% endif %}
-              {% endif %}
-              {% if sold_out %}
-                <br><strong>{{ 'products.product.sold_out' | t }}</strong>
-              {% endif %}
-              {% if on_sale %}
-                <br><s>{{ item.compare_at_price | money }}</s>
-              {% endif %}
-            </p>
-          {% else %}
-            <p>{{ item.content | strip_html | truncatewords: 50 }}</p>
-          {% endif %}
-        </div>
-        <!-- //grid search results-->
-      {% endif %}
+      {% unless forloop.last %}<hr>{% endunless %}
 
     {% endfor %}
 
